updated the notebook to exactly match the example given in the paper

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a75bc1bdc9ff42d5828bf93e757af007",
+       "model_id": "a847020b83e249c1839a2171c982a7e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,14 +49,11 @@
      "text": [
       "  sets  Pi 1                               Pi 2                        Pi 3\n",
       "------  ---------------------------------  --------------------------  ---------------------------------\n",
-      "     1  \\frac{P r}{L {\\omega_{L}}}         \\frac{Y}{L {\\omega_{L}}}    \\frac{{\\delta}}{r}\n",
-      "     2  \\frac{P {\\delta}}{L {\\omega_{L}}}  \\frac{Y}{L {\\omega_{L}}}    \\frac{r}{{\\delta}}\n",
-      "     3  \\frac{P r}{Y}                      \\frac{L {\\omega_{L}}}{Y}    \\frac{{\\delta}}{r}\n",
-      "     4  \\frac{P {\\delta}}{Y}               \\frac{L {\\omega_{L}}}{Y}    \\frac{r}{{\\delta}}\n",
-      "     5  \\frac{L {\\omega_{L}}}{Y}           \\frac{P r}{Y}               \\frac{P {\\delta}}{Y}\n",
-      "     6  \\frac{L {\\omega_{L}}}{P r}         \\frac{Y}{P r}               \\frac{{\\delta}}{r}\n",
-      "     7  \\frac{L {\\omega_{L}}}{P {\\delta}}  \\frac{Y}{P {\\delta}}        \\frac{r}{{\\delta}}\n",
-      "     8  \\frac{Y}{L {\\omega_{L}}}           \\frac{P r}{L {\\omega_{L}}}  \\frac{P {\\delta}}{L {\\omega_{L}}}\n"
+      "     1  \\frac{Y}{L {\\omega_{L}}}           \\frac{P r}{L {\\omega_{L}}}  \\frac{P {\\delta}}{L {\\omega_{L}}}\n",
+      "     2  \\frac{L {\\omega_{L}}}{P r}         \\frac{Y}{P r}               \\frac{{\\delta}}{r}\n",
+      "     3  \\frac{L {\\omega_{L}}}{P {\\delta}}  \\frac{Y}{P {\\delta}}        \\frac{r}{{\\delta}}\n",
+      "     4  \\frac{P r}{L {\\omega_{L}}}         \\frac{Y}{L {\\omega_{L}}}    \\frac{{\\delta}}{r}\n",
+      "     5  \\frac{P {\\delta}}{L {\\omega_{L}}}  \\frac{Y}{L {\\omega_{L}}}    \\frac{r}{{\\delta}}\n"
      ]
     }
    ],
@@ -64,10 +61,10 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',expression='K',explicit=False)\n",
+    "Economic_Growth.add_variable(name='P',expression='K')\n",
     "Economic_Growth.add_variable(name='L',expression='Q/T')\n",
     "Economic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
-    "Economic_Growth.add_variable(name='Y',expression='K/T')\n",
+    "Economic_Growth.add_variable(name='Y',expression='K/T',explicit=True)\n",
     "Economic_Growth.add_variable(name='r',expression='1/T')\n",
     "Economic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
     "\n",
