fixed the examples after changing the signature of add_variable

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a847020b83e249c1839a2171c982a7e8",
+       "model_id": "d2aaf1eb394c4a74b7a09365ab4fdad0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,12 +61,12 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',expression='K')\n",
-    "Economic_Growth.add_variable(name='L',expression='Q/T')\n",
-    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
-    "Economic_Growth.add_variable(name='Y',expression='K/T',explicit=True)\n",
-    "Economic_Growth.add_variable(name='r',expression='1/T')\n",
-    "Economic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
+    "Economic_Growth.add_variable(name='P',units='K')\n",
+    "Economic_Growth.add_variable(name='L',units='Q/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',units='K/Q')\n",
+    "Economic_Growth.add_variable(name='Y',units='K/T',explicit=True)\n",
+    "Economic_Growth.add_variable(name='r',units='1/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\delta}',units='1/T')\n",
     "\n",
     "Economic_Growth.generate_pi_terms()\n",
     "Economic_Growth.print_all()"
