--- a/examples.ipynb
+++ b/examples.ipynb
@@ -58,9 +58,9 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)')  # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',expression='L')                         # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',expression='M*T^(-2)')            # surface tension\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')  # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',units='L')                         # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='M*T^(-2)')            # surface tension\n",
     "try:\n",
     "    Pressure_In_Bubble.generate_pi_terms()\n",
     "    Pressure_In_Bubble.print_all()\n",
@@ -101,9 +101,9 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',expression='F*L^(-2)')       # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',expression='L')                       # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',expression='F*L^(-1)')          # surface tension\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='F*L^(-2)')       # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',units='L')                       # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='F*L^(-1)')          # surface tension\n",
     "\n",
     "Pressure_In_Bubble.generate_pi_terms()\n",
     "Pressure_In_Bubble.print_all()"
@@ -140,11 +140,11 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_Drop = BuckinghamPi()\n",
-    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)')     # pressure drop\n",
-    "Pressure_Drop.add_variable(name='R',expression='L')                            # length of the pipe\n",
-    "Pressure_Drop.add_variable(name='d',expression='L')                            # diameter of the pipe\n",
-    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*L^(-1)*T^(-1)')           # viscosity\n",
-    "Pressure_Drop.add_variable(name='Q',expression='L^(3)*T^(-1)')                 # volumetic flow rate\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')     # pressure drop\n",
+    "Pressure_Drop.add_variable(name='R',units='L')                            # length of the pipe\n",
+    "Pressure_Drop.add_variable(name='d',units='L')                            # diameter of the pipe\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',units='M*L^(-1)*T^(-1)')           # viscosity\n",
+    "Pressure_Drop.add_variable(name='Q',units='L^(3)*T^(-1)')                 # volumetic flow rate\n",
     "\n",
     "Pressure_Drop.generate_pi_terms()\n",
     "Pressure_Drop.print_all()"
@@ -180,12 +180,12 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',expression='K',explicit=True)           # capital\n",
-    "Economic_Growth.add_variable(name='L',expression='Q/T')                       # labor per period of time\n",
-    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')           # wages per labor\n",
-    "Economic_Growth.add_variable(name='Y',expression='K/T')                       # profit per period of time\n",
-    "Economic_Growth.add_variable(name='r',expression='1/T')                       # rental rate period of time\n",
-    "Economic_Growth.add_variable(name='{\\\\delta}',expression='1/T')               # depreciation rate\n",
+    "Economic_Growth.add_variable(name='P',units='K',explicit=True)           # capital\n",
+    "Economic_Growth.add_variable(name='L',units='Q/T')                       # labor per period of time\n",
+    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',units='K/Q')           # wages per labor\n",
+    "Economic_Growth.add_variable(name='Y',units='K/T')                       # profit per period of time\n",
+    "Economic_Growth.add_variable(name='r',units='1/T')                       # rental rate period of time\n",
+    "Economic_Growth.add_variable(name='{\\\\delta}',units='1/T')               # depreciation rate\n",
     "\n",
     "Economic_Growth.generate_pi_terms()\n",
     "Economic_Growth.print_all()"
