updated the initial look of the notebook to show the rendered Latex dimensionless sets

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2aaf1eb394c4a74b7a09365ab4fdad0",
+       "model_id": "ca8da2963d9146acb2e08b7758c08852",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,17 +44,124 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  sets  Pi 1                               Pi 2                        Pi 3\n",
-      "------  ---------------------------------  --------------------------  ---------------------------------\n",
-      "     1  \\frac{Y}{L {\\omega_{L}}}           \\frac{P r}{L {\\omega_{L}}}  \\frac{P {\\delta}}{L {\\omega_{L}}}\n",
-      "     2  \\frac{L {\\omega_{L}}}{P r}         \\frac{Y}{P r}               \\frac{{\\delta}}{r}\n",
-      "     3  \\frac{L {\\omega_{L}}}{P {\\delta}}  \\frac{Y}{P {\\delta}}        \\frac{r}{{\\delta}}\n",
-      "     4  \\frac{P r}{L {\\omega_{L}}}         \\frac{Y}{L {\\omega_{L}}}    \\frac{{\\delta}}{r}\n",
-      "     5  \\frac{P {\\delta}}{L {\\omega_{L}}}  \\frac{Y}{L {\\omega_{L}}}    \\frac{r}{{\\delta}}\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{P r}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{P {\\delta}}{L {\\omega_{L}}}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }2: \\quad\\pi_1 = \\frac{L {\\omega_{L}}}{P r}\\quad\\pi_2 = \\frac{Y}{P r}\\quad\\pi_3 = \\frac{{\\delta}}{r}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }3: \\quad\\pi_1 = \\frac{L {\\omega_{L}}}{P {\\delta}}\\quad\\pi_2 = \\frac{Y}{P {\\delta}}\\quad\\pi_3 = \\frac{r}{{\\delta}}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }4: \\quad\\pi_1 = \\frac{P r}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{{\\delta}}{r}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }5: \\quad\\pi_1 = \\frac{P {\\delta}}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{r}{{\\delta}}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
