updated the example notebook

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": "true"
+   },
+   "source": [
+    "# Table of Contents\n",
+    " <p><div class=\"lev1 toc-item\"><a href=\"#Buckingham-pi:--Dimensional-Analysis\" data-toc-modified-id=\"Buckingham-pi:--Dimensional-Analysis-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Buckingham $\\pi$:  Dimensional Analysis</a></div><div class=\"lev1 toc-item\"><a href=\"#Example-1:-Pressure-Drop-in-Pipe\" data-toc-modified-id=\"Example-1:-Pressure-Drop-in-Pipe-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Example 1: Pressure Drop in Pipe</a></div><div class=\"lev1 toc-item\"><a href=\"#Example-2:-Speed-of-Virus-Infection\" data-toc-modified-id=\"Example-2:-Speed-of-Virus-Infection-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Example 2: Speed of Virus Infection</a></div><div class=\"lev1 toc-item\"><a href=\"#Example-3:-Economic-Growth\" data-toc-modified-id=\"Example-3:-Economic-Growth-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Example 3: Economic Growth</a></div><div class=\"lev1 toc-item\"><a href=\"#Example-4:-Pressure-Inside-a-Bubble\" data-toc-modified-id=\"Example-4:-Pressure-Inside-a-Bubble-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Example 4: Pressure Inside a Bubble</a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Buckingham $\\pi$:  Dimensional Analysis\n",
@@ -30,111 +40,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 1: Pressure Inside a Bubble\n",
+    "# Example 1: Pressure Drop in Pipe\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using mass, length and time as fundamental physical dimensions:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of variables has to be greater than the number of physical dimensions.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from buckinghampy import BuckinghamPi\n",
-    "\n",
-    "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')  # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',units='L')                         # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='M*T^(-2)')            # surface tension\n",
-    "try:\n",
-    "    Pressure_In_Bubble.generate_pi_terms()\n",
-    "    Pressure_In_Bubble.print_all()\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using force and length as fundamental physical dimensions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{\\sigma}{R {\\Delta}p}\\quad$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from buckinghampy import BuckinghamPi\n",
-    "\n",
-    "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='F*L^(-2)')       # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',units='L')                       # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='F*L^(-1)')          # surface tension\n",
-    "\n",
-    "Pressure_In_Bubble.generate_pi_terms()\n",
-    "Pressure_In_Bubble.print_all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example 2: Pressure Drop in a Pipe\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -230,13 +142,170 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Example 2: Speed of Virus Infection\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using mass, length, time and temperature as fundamental dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{P_{r}^{2} V_{p}}{C_{a}}\\quad\\pi_2 = \\frac{C_{a} C_{e}}{P_{r}^{3}}\\quad\\pi_3 = E_{fs} P_{r}^{2}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }2: \\quad\\pi_1 = \\frac{C_{e} V_{p}}{P_{r}}\\quad\\pi_2 = \\frac{C_{a} C_{e}}{P_{r}^{3}}\\quad\\pi_3 = E_{fs} P_{r}^{2}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }3: \\quad\\pi_1 = \\frac{C_{e}^{\\frac{2}{3}} V_{p}}{\\sqrt[3]{C_{a}}}\\quad\\pi_2 = \\frac{P_{r}}{\\sqrt[3]{C_{a}} \\sqrt[3]{C_{e}}}\\quad\\pi_3 = C_{a}^{\\frac{2}{3}} C_{e}^{\\frac{2}{3}} E_{fs}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }4: \\quad\\pi_1 = \\frac{V_{p}}{C_{a} E_{fs}}\\quad\\pi_2 = \\sqrt{E_{fs}} P_{r}\\quad\\pi_3 = C_{a} C_{e} E_{fs}^{\\frac{3}{2}}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }5: \\quad\\pi_1 = C_{e} \\sqrt{E_{fs}} V_{p}\\quad\\pi_2 = \\sqrt{E_{fs}} P_{r}\\quad\\pi_3 = C_{a} C_{e} E_{fs}^{\\frac{3}{2}}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from buckinghampy import BuckinghamPi\n",
+    "\n",
+    "Virus_Infection = BuckinghamPi()\n",
+    "Virus_Infection.add_variable(name='V_{p}',units='L*T^(-1)', explicit=True)   # virus spread rate\n",
+    "Virus_Infection.add_variable(name='P_{r}',units='L')                         # precipitation\n",
+    "Virus_Infection.add_variable(name='{\\\\theta}',units='C')                     # temperature\n",
+    "Virus_Infection.add_variable(name='C_{a}',units='L^(3)/T')                   # airflow\n",
+    "Virus_Infection.add_variable(name='C_{e}',units='T')                         # seasonal changes\n",
+    "Virus_Infection.add_variable(name='E_{fs}',units='L^(-2)')                   # social structures\n",
+    "Virus_Infection.add_variable(name='H',units='M*L^(-3)')                      # humidity\n",
+    "\n",
+    "Virus_Infection.generate_pi_terms()\n",
+    "Virus_Infection.print_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Example 3: Economic Growth\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +419,104 @@
     "Economic_Growth.generate_pi_terms()\n",
     "Economic_Growth.print_all()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 4: Pressure Inside a Bubble\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using mass, length and time as fundamental physical dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of variables has to be greater than the number of physical dimensions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from buckinghampy import BuckinghamPi\n",
+    "\n",
+    "Pressure_In_Bubble = BuckinghamPi()\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')  # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',units='L')                         # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='M*T^(-2)')            # surface tension\n",
+    "try:\n",
+    "    Pressure_In_Bubble.generate_pi_terms()\n",
+    "    Pressure_In_Bubble.print_all()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using force and length as fundamental physical dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{\\sigma}{R {\\Delta}p}\\quad$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from buckinghampy import BuckinghamPi\n",
+    "\n",
+    "Pressure_In_Bubble = BuckinghamPi()\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='F*L^(-2)')       # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',units='L')                       # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='F*L^(-1)')          # surface tension\n",
+    "\n",
+    "Pressure_In_Bubble.generate_pi_terms()\n",
+    "Pressure_In_Bubble.print_all()"
+   ]
   }
  ],
  "metadata": {
@@ -386,10 +553,17 @@
     "width": "252px"
    },
    "navigate_menu": true,
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "threshold": 4,
-   "toc_cell": false,
+   "toc_cell": true,
+   "toc_position": {
+    "height": "39px",
+    "left": "0px",
+    "right": "1608px",
+    "top": "136px",
+    "width": "312px"
+   },
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
