updated the example in buckinghampy-gui notebook

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -20,12 +20,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca8da2963d9146acb2e08b7758c08852",
+       "model_id": "6d2fa730b1cb406e96d3544b4be6c8cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
+       "HBox(children=(BoundedIntText(value=5, continuous_update=True, description='Number of Variables:', style=Descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6fe704d5fbe44e359ba2d2da5ad94613",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e68fcf85241419d91650b00478fdf46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -34,8 +62,17 @@
    ],
    "source": [
     "#HIDDEN\n",
+    "# please run this cell to get access the GUI app\n",
     "from buckinghampy import BuckinghamPiGui\n",
     "GUI=BuckinghamPiGui()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 1: Pressure Drop in Pipe\n",
+    "---"
    ]
   },
   {
@@ -46,7 +83,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{P r}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{P {\\delta}}{L {\\omega_{L}}}\\quad$$"
+       "$$\\text{Set }1: \\quad\\pi_1 = \\frac{R}{d}\\quad\\pi_2 = \\frac{Q \\mu}{d^{3} {\\Delta}p}\\quad$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -70,7 +107,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\text{Set }2: \\quad\\pi_1 = \\frac{L {\\omega_{L}}}{P r}\\quad\\pi_2 = \\frac{Y}{P r}\\quad\\pi_3 = \\frac{{\\delta}}{r}\\quad$$"
+       "$$\\text{Set }2: \\quad\\pi_1 = \\frac{R \\sqrt[3]{{\\Delta}p}}{\\sqrt[3]{Q} \\sqrt[3]{\\mu}}\\quad\\pi_2 = \\frac{d \\sqrt[3]{{\\Delta}p}}{\\sqrt[3]{Q} \\sqrt[3]{\\mu}}\\quad$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -94,55 +131,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\text{Set }3: \\quad\\pi_1 = \\frac{L {\\omega_{L}}}{P {\\delta}}\\quad\\pi_2 = \\frac{Y}{P {\\delta}}\\quad\\pi_3 = \\frac{r}{{\\delta}}\\quad$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$$\\text{Set }4: \\quad\\pi_1 = \\frac{P r}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{{\\delta}}{r}\\quad$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$$\\text{Set }5: \\quad\\pi_1 = \\frac{P {\\delta}}{L {\\omega_{L}}}\\quad\\pi_2 = \\frac{Y}{L {\\omega_{L}}}\\quad\\pi_3 = \\frac{r}{{\\delta}}\\quad$$"
+       "$$\\text{Set }3: \\quad\\pi_1 = \\frac{d}{R}\\quad\\pi_2 = \\frac{Q \\mu}{R^{3} {\\Delta}p}\\quad$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -167,16 +156,15 @@
    "source": [
     "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',units='K')\n",
-    "Economic_Growth.add_variable(name='L',units='Q/T')\n",
-    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',units='K/Q')\n",
-    "Economic_Growth.add_variable(name='Y',units='K/T',explicit=True)\n",
-    "Economic_Growth.add_variable(name='r',units='1/T')\n",
-    "Economic_Growth.add_variable(name='{\\\\delta}',units='1/T')\n",
+    "Pressure_Drop = BuckinghamPi()\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')     # pressure drop\n",
+    "Pressure_Drop.add_variable(name='R',units='L')                            # length of the pipe\n",
+    "Pressure_Drop.add_variable(name='d',units='L')                            # diameter of the pipe\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',units='M*L^(-1)*T^(-1)')           # viscosity\n",
+    "Pressure_Drop.add_variable(name='Q',units='L^(3)*T^(-1)')                 # volumetic flow rate\n",
     "\n",
-    "Economic_Growth.generate_pi_terms()\n",
-    "Economic_Growth.print_all()"
+    "Pressure_Drop.generate_pi_terms()\n",
+    "Pressure_Drop.print_all()"
    ]
   },
   {
@@ -221,7 +209,7 @@
     "width": "252px"
    },
    "navigate_menu": true,
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
