changed the signature of the add_variable function. To be more descriptive, we changed the argument name explicit to non_repeating.

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -283,13 +283,13 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Virus_Infection = BuckinghamPi()\n",
-    "Virus_Infection.add_variable(name='V_{p}',units='L*T^(-1)', explicit=True)   # virus spread rate\n",
-    "Virus_Infection.add_variable(name='P_{r}',units='L')                         # precipitation\n",
-    "Virus_Infection.add_variable(name='{\\\\theta}',units='C')                     # temperature\n",
-    "Virus_Infection.add_variable(name='C_{a}',units='L^(3)/T')                   # airflow\n",
-    "Virus_Infection.add_variable(name='C_{e}',units='T')                         # seasonal changes\n",
-    "Virus_Infection.add_variable(name='E_{fs}',units='L^(-2)')                   # social structures\n",
-    "Virus_Infection.add_variable(name='H',units='M*L^(-3)')                      # humidity\n",
+    "Virus_Infection.add_variable(name='V_{p}',units='L*T^(-1)', non_repeating=True)   # virus spread rate\n",
+    "Virus_Infection.add_variable(name='P_{r}',units='L')                              # precipitation\n",
+    "Virus_Infection.add_variable(name='{\\\\theta}',units='C')                          # temperature\n",
+    "Virus_Infection.add_variable(name='C_{a}',units='L^(3)/T')                        # airflow\n",
+    "Virus_Infection.add_variable(name='C_{e}',units='T')                              # seasonal changes\n",
+    "Virus_Infection.add_variable(name='E_{fs}',units='L^(-2)')                        # social structures\n",
+    "Virus_Infection.add_variable(name='H',units='M*L^(-3)')                           # humidity\n",
     "\n",
     "Virus_Infection.generate_pi_terms()\n",
     "Virus_Infection.print_all()"
@@ -409,7 +409,7 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',units='K',explicit=True)           # capital\n",
+    "Economic_Growth.add_variable(name='P',units='K', non_repeating=True)     # capital\n",
     "Economic_Growth.add_variable(name='L',units='Q/T')                       # labor per period of time\n",
     "Economic_Growth.add_variable(name='{\\\\omega_{L}}',units='K/Q')           # wages per labor\n",
     "Economic_Growth.add_variable(name='Y',units='K/T')                       # profit per period of time\n",
