Changed the name of the argument "units" in signature of add_variable function to "dimensions". We believe this change makes the function clearer.

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e4986a6386245509174e1e84bb737b2",
+       "model_id": "b515e9db6f444d8abe20271a57d46ccd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4ad264131bf4c34b461e3bec8f01058",
+       "model_id": "3ab89f92a0a448af96b04a8a3ebb87d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cd1c59a39da412281bf73ea2e0a3dc6",
+       "model_id": "955e906d80814b7194d9d46979fda778",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,11 +157,11 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_Drop = BuckinghamPi()\n",
-    "Pressure_Drop.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')     # pressure drop\n",
-    "Pressure_Drop.add_variable(name='R',units='L')                            # length of the pipe\n",
-    "Pressure_Drop.add_variable(name='d',units='L')                            # diameter of the pipe\n",
-    "Pressure_Drop.add_variable(name='\\\\mu',units='M*L^(-1)*T^(-1)')           # viscosity\n",
-    "Pressure_Drop.add_variable(name='Q',units='L^(3)*T^(-1)')                 # volumetic flow rate\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',dimensions='M*L^(-1)*T^(-2)')     # pressure drop\n",
+    "Pressure_Drop.add_variable(name='R',dimensions='L')                            # length of the pipe\n",
+    "Pressure_Drop.add_variable(name='d',dimensions='L')                            # diameter of the pipe\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',dimensions='M*L^(-1)*T^(-1)')           # viscosity\n",
+    "Pressure_Drop.add_variable(name='Q',dimensions='L^(3)*T^(-1)')                 # volumetic flow rate\n",
     "\n",
     "Pressure_Drop.generate_pi_terms()\n",
     "Pressure_Drop.print_all()"
