--- a/examples.ipynb
+++ b/examples.ipynb
@@ -128,11 +128,11 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_Drop = BuckinghamPi()\n",
-    "Pressure_Drop.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')     # pressure drop\n",
-    "Pressure_Drop.add_variable(name='R',units='L')                            # length of the pipe\n",
-    "Pressure_Drop.add_variable(name='d',units='L')                            # diameter of the pipe\n",
-    "Pressure_Drop.add_variable(name='\\\\mu',units='M*L^(-1)*T^(-1)')           # viscosity\n",
-    "Pressure_Drop.add_variable(name='Q',units='L^(3)*T^(-1)')                 # volumetic flow rate\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',dimensions='M*L^(-1)*T^(-2)')     # pressure drop\n",
+    "Pressure_Drop.add_variable(name='R',dimensions='L')                            # length of the pipe\n",
+    "Pressure_Drop.add_variable(name='d',dimensions='L')                            # diameter of the pipe\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',dimensions='M*L^(-1)*T^(-1)')           # viscosity\n",
+    "Pressure_Drop.add_variable(name='Q',dimensions='L^(3)*T^(-1)')                 # volumetic flow rate\n",
     "\n",
     "Pressure_Drop.generate_pi_terms()\n",
     "Pressure_Drop.print_all()"
@@ -283,13 +283,13 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Virus_Infection = BuckinghamPi()\n",
-    "Virus_Infection.add_variable(name='V_{p}',units='L*T^(-1)', non_repeating=True)   # virus spread rate\n",
-    "Virus_Infection.add_variable(name='P_{r}',units='L')                              # precipitation\n",
-    "Virus_Infection.add_variable(name='{\\\\theta}',units='C')                          # temperature\n",
-    "Virus_Infection.add_variable(name='C_{a}',units='L^(3)/T')                        # airflow\n",
-    "Virus_Infection.add_variable(name='C_{e}',units='T')                              # seasonal changes\n",
-    "Virus_Infection.add_variable(name='E_{fs}',units='L^(-2)')                        # social structures\n",
-    "Virus_Infection.add_variable(name='H',units='M*L^(-3)')                           # humidity\n",
+    "Virus_Infection.add_variable(name='V_{p}',dimensions='L*T^(-1)', non_repeating=True)   # virus spread rate\n",
+    "Virus_Infection.add_variable(name='P_{r}',dimensions='L')                              # precipitation\n",
+    "Virus_Infection.add_variable(name='{\\\\theta}',dimensions='C')                          # temperature\n",
+    "Virus_Infection.add_variable(name='C_{a}',dimensions='L^(3)/T')                        # airflow\n",
+    "Virus_Infection.add_variable(name='C_{e}',dimensions='T')                              # seasonal changes\n",
+    "Virus_Infection.add_variable(name='E_{fs}',dimensions='L^(-2)')                        # social structures\n",
+    "Virus_Infection.add_variable(name='H',dimensions='M*L^(-3)')                           # humidity\n",
     "\n",
     "Virus_Infection.generate_pi_terms()\n",
     "Virus_Infection.print_all()"
@@ -409,12 +409,12 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Economic_Growth = BuckinghamPi()\n",
-    "Economic_Growth.add_variable(name='P',units='K', non_repeating=True)     # capital\n",
-    "Economic_Growth.add_variable(name='L',units='Q/T')                       # labor per period of time\n",
-    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',units='K/Q')           # wages per labor\n",
-    "Economic_Growth.add_variable(name='Y',units='K/T')                       # profit per period of time\n",
-    "Economic_Growth.add_variable(name='r',units='1/T')                       # rental rate period of time\n",
-    "Economic_Growth.add_variable(name='{\\\\delta}',units='1/T')               # depreciation rate\n",
+    "Economic_Growth.add_variable(name='P',dimensions='K', non_repeating=True)     # capital\n",
+    "Economic_Growth.add_variable(name='L',dimensions='Q/T')                       # labor per period of time\n",
+    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',dimensions='K/Q')           # wages per labor\n",
+    "Economic_Growth.add_variable(name='Y',dimensions='K/T')                       # profit per period of time\n",
+    "Economic_Growth.add_variable(name='r',dimensions='1/T')                       # rental rate period of time\n",
+    "Economic_Growth.add_variable(name='{\\\\delta}',dimensions='1/T')               # depreciation rate\n",
     "\n",
     "Economic_Growth.generate_pi_terms()\n",
     "Economic_Growth.print_all()"
@@ -452,9 +452,9 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='M*L^(-1)*T^(-2)')  # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',units='L')                         # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='M*T^(-2)')            # surface tension\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',dimensions='M*L^(-1)*T^(-2)')  # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',dimensions='L')                         # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',dimensions='M*T^(-2)')            # surface tension\n",
     "try:\n",
     "    Pressure_In_Bubble.generate_pi_terms()\n",
     "    Pressure_In_Bubble.print_all()\n",
@@ -510,9 +510,9 @@
     "from buckinghampy import BuckinghamPi\n",
     "\n",
     "Pressure_In_Bubble = BuckinghamPi()\n",
-    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',units='F*L^(-2)')       # pressure \n",
-    "Pressure_In_Bubble.add_variable(name='R',units='L')                       # diameter\n",
-    "Pressure_In_Bubble.add_variable(name='\\\\sigma',units='F*L^(-1)')          # surface tension\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',dimensions='F*L^(-2)')       # pressure \n",
+    "Pressure_In_Bubble.add_variable(name='R',dimensions='L')                       # diameter\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',dimensions='F*L^(-1)')          # surface tension\n",
     "\n",
     "Pressure_In_Bubble.generate_pi_terms()\n",
     "Pressure_In_Bubble.print_all()"
