added an image of the GUI application to the Gui notebook

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -7,7 +7,13 @@
     "# Buckingham $\\pi$:  Dimensional Analysis\n",
     "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
     "<hr/>\n",
-    "This notebook represents the graphical user interface of `buckinghamPy` "
+    "This notebook represents the graphical user interface of `BuckinghamPy`.\n",
+    "\n",
+    "In the following image we represent how to obtain the sets of dimensionless groups for the example of Pressure Drop in a Pipe using the GUI\n",
+    "\n",
+    "![Latex Rendered Results](doc/Gui-example.png)\n",
+    "\n",
+    "Run the cell below to lunch the GUI application "
    ]
   },
   {
@@ -20,40 +26,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b515e9db6f444d8abe20271a57d46ccd",
+       "model_id": "6338da514e074d119c1a4e108f336944",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=5, continuous_update=True, description='Number of Variables:', style=Descr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ab89f92a0a448af96b04a8a3ebb87d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "955e906d80814b7194d9d46979fda778",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
       ]
      },
      "metadata": {},
